syntax = "proto3";

package spam;

option go_package = "./proto;spam";

service Spam {
	rpc Check(CheckRequest) returns (CheckResponse) {}
}

message CheckRequest {
	string email_body = 1;
	string to = 2;
	string from = 3;
	string subject = 4;
}

message CheckResponse {
	bool is_spam = 1;
	double score = 2;
	repeated string details = 3;
}
